<resources>
    <string name="app_name">Interview Bot</string>
    <string name="generateButton">Generate</string>
    <string name="categoryLabel">Category:</string>
    <string name="questionText">Choose a category and click \n to generate an interview question</string>
    <string name="submissionButton">Submit</string>
    <string name="submissionTitleText">Submit a Question</string>
    <string name="submissionBoxText">Enter interview question</string>
    <string name="addButton">Add your own question</string>
    <string name="backButton">Go back</string>
</resources>
